--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -92,7 +92,7 @@
     "for powering your circuit. Configure your voltage divider so the FSR is\n",
     "connected to GND, and use an oscilloscope, multimeter or serial monitor (you have to hook up the (+) output to A0 and (-) output to GND of the Arduino.\n",
     "\n",
-    "**Question 2:** What is the resistance of your FSR with an empty falcon tube placed on the sensor? With a 100g mass? Show your work. Sketch and label your circuit, and write down what weight you used. Pro-Tip: To help with consistency of your measurements, tape down the FSR and let the\n",
+    "**Question 2:** What is the resistance of your FSR with an empty falcon tube placed on the sensor? With a 10 g mass? With a 100g mass? (Fill the Falcon tube with water to vary the weights.) Show your work. Sketch and label your circuit, and write down what weight you used. Pro-Tip: To help with consistency of your measurements, tape down the FSR and let the\n",
     "measurement ‘settle’ for 2-3 min to reach steady-state before recording.\n",
     "\n"
    ]
@@ -105,7 +105,7 @@
     "\n",
     "- Build a matched Wheatstone bridge with your sensor, choosing resistor\n",
     "values for R1 (in the diagram below) that are as close as possible to the\n",
-    "steady-state resistance of your FSR with no load, as determined in Question 2.\n",
+    "steady-state resistance of your FSR with 10 g, as determined in Question 2.\n",
     "It’s OK if the resistances don’t match perfectly—just try to get them as close\n",
     "as you can.\n",
     "\n",
@@ -327,7 +327,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -341,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
