--- a/lab4/lab4.ipynb
+++ b/lab4/lab4.ipynb
@@ -25,28 +25,26 @@
     "tingling/dizziness from wearing them. ALWAYS ASK if you are uncertain of a circuit\n",
     "connection before hooking up power to yourself.\n",
     "\n",
-    "##1. Schedule and Lab Reports\n",
+    "### Schedule and Lab Reports\n",
     "a) Week 1: Prototype an EKG amplifier on a breadboard and test it on a live human\n",
     "subject. Entire pre-lab is due at the beginning of the lab.\n",
-    "b) Week 2: Transfer your circuit to a protoboard to practice soldering, and try to get\n",
-    "fancy with your LabView VI to get extra credit. The entire lab report is due the\n",
+    "b) Week 2: Read out your EKG data to the Arduino and get fancy for extra credit. The entire lab report is due the\n",
     "week following the lab—no lab report is due at the beginning of the second week.\n",
     "\n",
     "## 1. Lab Setup\n",
     "<li>a) In this lab exercise you will prototype your own EKG amplifier, incorporating\n",
     "many of the design concepts we’ve discussed in lecture. You will construct and\n",
-    "test the circuit on a breadboard and answer the following lab questions. Then\n",
-    "you will transfer your design to a permanent protoboard, which will require that you solder the components on.</li>\n",
+    "test the circuit on a breadboard and answer the following lab questions. </li>\n",
     "<li>b) You and your partner(s) should have the following items: breadboard and\n",
-    "jumper wire kit, AD620 instrumentation amp, LM324, 9V batteries and battery\n",
-    "connectors, self-adhesive EKG electrodes, BNC cable and adaptors, alligator clip leads, prototype board.</li>\n",
+    "jumper wires, AD620 instrumentation amp, LM324, 9V batteries and battery\n",
+    "connectors, self-adhesive EKG electrodes, BNC cable and adaptors, alligator clip leads, prototype board. We strongly recommend that you cut and strip wires to size to keep your breadboard organized; if it is a mess of wires, it can be extremely hard to debug and the GSIs and lab assistants reserve the right to not debug your board. </li>\n",
     "<li>c) You can get all the other electronic components (resistors and capacitors) and connectors, adaptors, cables that are needed from the cabinets—look there or ask before digging around!</li>\n",
     "\n",
     "## 2. EKG Breadboard Prototyping\n",
     "<li>a) The bulk of the lab will involve constructing and testing the circuit described below and in your pre-lab. This circuit is more complicated than others we have built in lab. Follow the instructions below, don’t skip ahead, and test your circuit one portion at a time to ensure that it works. This will actually save you time!</li>\n",
     "<li>b) Pull up the datasheets for the AD620 and LM324. Find the pinout diagram. Note the little indentation on the top of the chip and make sure the chip is in the same orientation as it is in the datasheet.</li>\n",
     "<li>c) Place both ICs on the breadboard. Make sure they straddle the groove in between two rows of pins, so that the pins do not make electrical contact with each other. You will want to give yourself some space between the two ICs for the rest of the components.</li>\n",
-    "<li>d) The schematic we’ve given you is typical of what you might see in a design scenario. Notice that we’ve left off the power leads going to the op-amps as well as the specific pin numbers for inputs and outputs. You’ll need to use the datasheet to figure out which pins are which. The op-amp chip contains 4 op-amps. Note that you’ll only be using two of them.</li>\n",
+    "<li>d) The schematic we’ve given you is typical of what you might see in a design scenario. Notice that we’ve left off the power leads going to the op-amps as well as the specific pin numbers for inputs and outputs. You’ll need to use the datasheet to figure out which pins are which. </li>\n",
     "<li>e) Wire up your battery terminals (no battery yet, just the battery connector) to the binding posts at the top of the breadboard. You need both a +9V and -9V supply, so you’ll have to figure out how to wire these together. You should have a common ground. You may want to strip a bit more of the battery terminal leads to make a good connection.</li>\n",
     "<li>f) Connect your +9V, -9V, and GND to 3 different vertical rails on your breadboard. This makes it easier to connect lots of components to these (very common) nodes.</li>\n",
     "<li>g) Connect the power leads to both chips. Connect the V+ and V- of the AD620 to your +9V and -9V rails, respectively. On the op-amp chip, all 4 op-amps share a common pair of power pins. Note that this op-amp can operate on either a single supply (V+ and GND) or a dual supply (V+ and V-). You’ll be using a dual supply, so +9V will connect to the V+ pin and -9V will connect to the GND pin. Don’t forget to wire the REF pin of the AD620 to GND.</li>\n",
@@ -164,72 +162,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Soldering on Protoboards--Do we want to do this?\n",
-    "- Breadboards are convenient for debugging but they’re notoriously fragile. Once you’re happy with your design, you often want to transfer it to something more\n",
-    "permanent. You can layout and order a full custom PCB, but that is sometimes\n",
-    "more expensive and trouble than it’s worth. Alternatively, you can use\n",
-    "“protoboards”, which are a robust, cheap alternative. Note that the hole pattern\n",
-    "for protoboards is similar to that of breadboards. Note also that components will\n",
-    "go on the side of the board without copper pads and you will solder them on the\n",
-    "side with copper (see photos).\n",
-    "- The goal here is that each of your group members practices soldering.\n",
-    "Demonstrate to your GSI at some point in the lab that each of you can make a\n",
-    "good solder connection.\n",
-    "If you also want to build the complete heart monitor for extra credit, you might\n",
-    "want to leave your breadboard circuit intact and pick additional components for\n",
-    "the protoboard version.\n",
-    "- At minimum, we want you to construct the first stage of the amplifier. This\n",
-    "includes soldering the 8-pin DIP socket for the AD620 and inserting this chip,\n",
-    "soldering on the alligator EKG leads to the inputs of this chip, soldering the 9V\n",
-    "battery leads onto the board, wiring the power supply and ground (REF) to the\n",
-    "chip, and soldering on the gain-setting resistor. You’ll also want to solder an\n",
-    "output lead and a ground lead to hook up your scope.\n",
-    "- Plug in the batteries and demonstrate to a TA that your amplifier works on your\n",
-    "patient. Note the significant amount of 60 Hz, low frequency drift, and high\n",
-    "frequency noise that is present without including stage 2 and 3. You should still\n",
-    "be able to see the EKG signal in there though.\n",
-    "- Add stage 2 and 3 and demonstrate to a GSI that your circuit works.\n",
     "\n",
-    "## 6. Arduino/Python Heart Monitor (Extra Credit--Do we want to do this?)\n",
+    "## 5. Arduino/Python Heart Monitor (Extra Credit)\n",
     "a) Now connect the output of your amplifier to your Arduino. You will want to use\n",
     "reference single-ended (RSE) mode for detection, although differential mode will\n",
     "work too.\n",
+    "\n",
     "b) Create a new GUI as you have before with a while loop, DAQ Express\n",
     "acquisition module, and a waveform graph. Use continuous sampling and pick a\n",
     "reasonable sampling rate and buffer size. (Hint: what’s the bandwidth of your\n",
     "amplifier? Pick a sampling frequency ~5X this bandwidth).\n",
+    "\n",
     "c) Build a heart monitor application which produces the following:\n",
+    "\n",
     "i. A graph of the waveform, appropriately scaled (+10 points)\n",
+    "\n",
     "ii. A short beep indicating a heartbeat (+10 points)\n",
+    "\n",
     "iii. A number indicating heart rate. This should be updated in real time. (+10\n",
     "points)\n",
+    "\n",
     "iv. A long tone indicating cardiac arrest (aka “code blue”). In our case, we will\n",
     "define this as having no detectable pulse for 5 seconds. (+10 points)\n",
+    "\n",
     "v. Frequency of tone scales with heart rate (higher heart rates lead to higher\n",
     "frequencies). (+10 points)\n",
+    "\n",
     "vi. Add a software band-pass filter to reduce interference and motion artifacts.\n",
     "(+10 points)\n",
+    "\n",
     "vii. Use an autocorrelation algorithm rather than a thresholding algorithm to\n",
     "detect heart rate. Note that this will be much more robust than the\n",
     "thresholding algorithm. (+30 points)\n",
-    "d) Here are some tips to get you started:i. You’ll want to come up with a way of identifying the heartbeat and marking\n",
+    "\n",
+    "d) Here are some tips to get you started:\n",
+    "\n",
+    "i. You’ll want to come up with a way of identifying the heartbeat and marking\n",
     "the time when it occurs (in milliseconds). This can be accomplished using an\n",
     "amplitude comparison which triggers an event structure.\n",
+    "\n",
     "ii. The simplest way to determine heart rate is to subtract the current heart beat\n",
     "timestamp from the last recorded heart beat timestamp. To do this, you’ll\n",
     "need to use something called a “shift register” in LabVIEW.\n",
+    "\n",
     "iii. You can identify cardiac arrest in a similar way.\n",
+    "\n",
     "iv. The trick to getting this to work is in making sure your event code only runs\n",
     "once per heartbeat. To do this, you could set a time threshold. If an event\n",
     "occurs within this minimum time threshold after the previous event, you\n",
     "would ignore it, because you’d assume it was triggered by the same heart\n",
     "beat waveform. In electronics, we refer to this as “debouncing”.\n",
+    "\n",
     "v. To create a tone, check out the “Beep” function in LabVIEW. This lets you\n",
     "pick a frequency and duration.\n",
+    "\n",
     "vi. Make the tone frequency scale with the heart rate, so faster heart rates\n",
     "generate higher frequency beeps.\n",
+    "\n",
     "e) To claim your extra credit, demonstrate your heart monitor to a GSI and upload\n",
-    "screenshots of your GUI and block diagram along with your lab questions.\n"
+    "screenshots of your GUI and block diagram along with your lab questions."
    ]
   }
  ],
