--- a/lab4/lab4.ipynb
+++ b/lab4/lab4.ipynb
@@ -2,11 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "# BioE 101 Lab 4\n",
+    "# BioE 101 Lab 4 - Build an EKG\n",
     "\n",
     "## Objectives:\n",
     "\n",
@@ -20,34 +18,56 @@
     "\n",
     "- Interface conditioned analog signals with digital logic in Arduino and Python\n",
     "\n",
-    "NOTE: This lab involves the use of electrodes directly coupled to skin. Please STOP\n",
+    "**<span style=\"color:red\">NOTE: This lab involves the use of electrodes directly coupled to skin. Please STOP\n",
     "and CALL a TA if you are uncomfortable with using these electrodes, or if you feel\n",
     "tingling/dizziness from wearing them. ALWAYS ASK if you are uncertain of a circuit\n",
-    "connection before hooking up power to yourself.\n",
+    "connection before hooking up power to yourself.</span>**\n",
     "\n",
-    "### Schedule and Lab Reports\n",
-    "a) Week 1: Prototype an EKG amplifier on a breadboard and test it on a live human\n",
+    "## Schedule and Lab Reports\n",
+    "-  Week 1: Prototype an EKG amplifier on a breadboard and test it on a live human\n",
     "subject. Entire pre-lab is due at the beginning of the lab.\n",
-    "b) Week 2: Read out your EKG data to the Arduino and get fancy for extra credit. The entire lab report is due the\n",
-    "week following the lab—no lab report is due at the beginning of the second week.\n",
     "\n",
+    "- Week 2: Read out your EKG data to the Arduino and get fancy for extra credit. The entire lab report is due the\n",
+    "week following the lab — no lab report is due at the beginning of the second week."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1. Lab Setup\n",
-    "<li>a) In this lab exercise you will prototype your own EKG amplifier, incorporating\n",
+    "- In this lab exercise you will prototype your own EKG amplifier, incorporating\n",
     "many of the design concepts we’ve discussed in lecture. You will construct and\n",
-    "test the circuit on a breadboard and answer the following lab questions. </li>\n",
-    "<li>b) You and your partner(s) should have the following items: breadboard and\n",
-    "jumper wires, AD620 instrumentation amp, LM324, 9V batteries and battery\n",
-    "connectors, self-adhesive EKG electrodes, BNC cable and adaptors, alligator clip leads, prototype board. We strongly recommend that you cut and strip wires to size to keep your breadboard organized; if it is a mess of wires, it can be extremely hard to debug and the GSIs and lab assistants reserve the right to not debug your board. </li>\n",
-    "<li>c) You can get all the other electronic components (resistors and capacitors) and connectors, adaptors, cables that are needed from the cabinets—look there or ask before digging around!</li>\n",
+    "test the circuit on a breadboard and answer the following lab questions. \n",
     "\n",
+    "- You and your partner(s) should have the following items: breadboard and\n",
+    "jumper wires, AD620 instrumentation amp, LM324, 9V batteries and battery\n",
+    "connectors, self-adhesive EKG electrodes, BNC cable and adaptors, alligator clip leads, prototype board. We strongly recommend that you cut and strip wires to size to keep your breadboard organized; if it is a mess of wires, it can be extremely hard to debug and the GSIs and lab assistants reserve the right to not debug your board. \n",
+    "\n",
+    "- You can get all the other electronic components (resistors and capacitors) and connectors, adaptors, cables that are needed from the cabinets—look there or ask before digging around!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
     "## 2. EKG Breadboard Prototyping\n",
-    "<li>a) The bulk of the lab will involve constructing and testing the circuit described below and in your pre-lab. This circuit is more complicated than others we have built in lab. Follow the instructions below, don’t skip ahead, and test your circuit one portion at a time to ensure that it works. This will actually save you time!</li>\n",
-    "<li>b) Pull up the datasheets for the AD620 and LM324. Find the pinout diagram. Note the little indentation on the top of the chip and make sure the chip is in the same orientation as it is in the datasheet.</li>\n",
-    "<li>c) Place both ICs on the breadboard. Make sure they straddle the groove in between two rows of pins, so that the pins do not make electrical contact with each other. You will want to give yourself some space between the two ICs for the rest of the components.</li>\n",
-    "<li>d) The schematic we’ve given you is typical of what you might see in a design scenario. Notice that we’ve left off the power leads going to the op-amps as well as the specific pin numbers for inputs and outputs. You’ll need to use the datasheet to figure out which pins are which. </li>\n",
-    "<li>e) Wire up your battery terminals (no battery yet, just the battery connector) to the binding posts at the top of the breadboard. You need both a +9V and -9V supply, so you’ll have to figure out how to wire these together. You should have a common ground. You may want to strip a bit more of the battery terminal leads to make a good connection.</li>\n",
-    "<li>f) Connect your +9V, -9V, and GND to 3 different vertical rails on your breadboard. This makes it easier to connect lots of components to these (very common) nodes.</li>\n",
-    "<li>g) Connect the power leads to both chips. Connect the V+ and V- of the AD620 to your +9V and -9V rails, respectively. On the op-amp chip, all 4 op-amps share a common pair of power pins. Note that this op-amp can operate on either a single supply (V+ and GND) or a dual supply (V+ and V-). You’ll be using a dual supply, so +9V will connect to the V+ pin and -9V will connect to the GND pin. Don’t forget to wire the REF pin of the AD620 to GND.</li>\n",
+    "- The bulk of the lab will involve constructing and testing the circuit described below and in your pre-lab. This circuit is more complicated than others we have built in lab. Follow the instructions below, don’t skip ahead, and test your circuit one portion at a time to ensure that it works. This will actually save you time!\n",
+    "\n",
+    "- Pull up the datasheets for the AD620 and LM324. Find the pinout diagram. Note the little indentation on the top of the chip and make sure the chip is in the same orientation as it is in the datasheet.\n",
+    "\n",
+    "- Place both ICs on the breadboard. Make sure they straddle the groove in between two rows of pins, so that the pins do not make electrical contact with each other. You will want to give yourself some space between the two ICs for the rest of the components.\n",
+    "\n",
+    "- The schematic we’ve given you is typical of what you might see in a design scenario. Notice that we’ve left off the power leads going to the op-amps as well as the specific pin numbers for inputs and outputs. You’ll need to use the datasheet to figure out which pins are which. \n",
+    "\n",
+    "- Wire up your battery terminals (no battery yet, just the battery connector) to the binding posts at the top of the breadboard. You need both a +9V and -9V supply, so you’ll have to figure out how to wire these together. You should have a common ground. You may want to strip a bit more of the battery terminal leads to make a good connection.\n",
+    "\n",
+    "- Connect your +9V, -9V, and GND to 3 different vertical rails on your breadboard. This makes it easier to connect lots of components to these (very common) nodes.\n",
+    "\n",
+    "- Connect the power leads to both chips. Connect the V+ and V- of the AD620 to your +9V and -9V rails, respectively. On the op-amp chip, all 4 op-amps share a common pair of power pins. Note that this op-amp can operate on either a single supply (V+ and GND) or a dual supply (V+ and V-). You’ll be using a dual supply, so +9V will connect to the V+ pin and -9V will connect to the GND pin. Don’t forget to wire the REF pin of the AD620 to GND.\n",
+    "\n",
     "<br></br>\n",
     "<center>\n",
     "<img src=\"http://puu.sh/tjivQ/3483116c4d.png\" align=\"center\" style=\"height:350px\" />\n",
@@ -70,13 +90,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<li>h) Now connect the gain-setting resistor, R1, between the two R pins on the AD620.</li>\n",
+    "- Now connect the gain-setting resistor, R1, between the two R pins on the AD620.\n",
     "\n",
-    "<li>i) Connect the remaining resistors and capacitors between the amplifiers to create the low-pass and high-pass filter. NOTE: You can use any two op-amps on the LM324 that you want; they are all identical.</li>\n",
+    "- Connect the remaining resistors and capacitors between the amplifiers to create the low-pass and high-pass filter. NOTE: You can use any two op-amps on the LM324 that you want; they are all identical, but make sure that the pins match the op-amp you want to use.\n",
     "\n",
-    "<li>**j) Get a GSI to check off your circuit before connecting the batteries.**</li>\n",
+    "- Get a GSI to check off your circuit before connecting the batteries.**\n",
     "\n",
-    "<li>k) Now you’re ready to test your circuit. Plug in the batteries. Using the function generator, apply a 50mV test signal between the inputs of your instrumentation amp. You can use small pieces of wire to plug into the breadboard and then use the BNC-to-banana adapter to connect to the function generator. Use the tee adapter to connect the function generator to both scope channel 1 and your circuit. Connect the scope probe to channel 2 of the scope and use this to measure the signal at the output of the instrumentation amp (pin 6)—not the output of the entire circuit. This will let you see the input signal (from the function generator) and the output signal (from the instrumentation amp) simultaneously.</li>\n",
+    "- Now you’re ready to test your circuit. \n",
+    "    - Plug in the batteries. Using the function generator, apply a 50mV test signal between the inputs of your instrumentation amp. You can use small pieces of wire to plug into the breadboard and then use the BNC-to-banana adapter to connect to the function generator. Use the T-adapter to connect the function generator to both scope channel 1 and your circuit. Connect the scope probe to channel 2 of the scope and use this to measure the signal at the output of the instrumentation amp (pin 6)—not the output of the entire circuit. This will let you see the input signal (from the function generator) and the output signal (from the instrumentation amp) simultaneously.\n",
     "\n",
     "**Question 2: **What is the gain of your instrumentation amp (and ONLY the in-amp) at a frequency of 10 Hz? How does it change as you increase the frequency to 1 MHz? Why? At what frequency does the amp go to a gain of 1 (i.e. output is same voltage as input)?\n"
    ]
@@ -85,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<li>l) Now connect the scope to the output of the second stage (i.e. the high pass filter).</li>\n",
+    "- Now connect the scope to the output of the second stage (i.e. the high pass filter).\n",
     "\n",
     "**Question 3:**\n",
     "What is the gain of these first two stages together at 10 Hz? Start decreasing\n",
@@ -96,26 +117,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<li>m) Finally, connect the scope to the output of the third stage (i.e. the low pass filter),\n",
-    "so you’re looking at the input/output behavior of your entire circuit.</li>\n",
+    "- Finally, connect the scope to the output of the third stage (i.e. the low pass filter),\n",
+    "so you’re looking at the input/output behavior of your entire circuit.\n",
     "\n",
     "**Question 4:** What is the overall gain at 10 Hz? Is your signal getting distorted and if so,why? If you increase the frequency, at what frequency does the gain start to drop? What\n",
-    "type of filter is this? What’s the overall bandwidth of your system?\n"
+    "type of filter is this? What’s the overall bandwidth of your system?\n",
+    "\n",
+    "**Show your results to a GSI before connecting the EKG leads.**\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<li>**n) Show your results to a GSI before connecting the EKG leads.**</li>\n",
     "\n",
     "## 3. Testing your EKG on a live human subject\n",
     "\n",
-    "<li>a) Now you will measure your own EKG! Pick someone from your group\n",
+    "- Now you will measure your own EKG! Pick someone from your group\n",
     "(requirement: they must have a pulse) and place two self-adhesive Ag/AgCl\n",
     "electrodes on the underside of their wrists. Connect these leads to the differential\n",
     "input of your circuit using alligator leads. Tune the scope so you can comfortably\n",
-    "see a few heartbeats.</li>\n",
+    "see a few heartbeats.\n",
     "\n",
     "**Question 5: **\n",
     "What is the amplitude of the QRS complex? Freeze the scope display and\n",
@@ -126,8 +148,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<li>b) Your amplifier is very sensitive because of its high gain and high input\n",
-    "impedance. We will now investigate a few different kinds of interference.</li>\n",
+    "- Your amplifier is very sensitive because of its high gain and high input\n",
+    "impedance. We will now investigate a few different kinds of interference.\n",
     "\n",
     "**Question 6:**\n",
     "What happens when a partner in the group moves their hands in the\n",
@@ -157,77 +179,12 @@
     "you think this could be? Why would we see such a high frequency interference when\n",
     "we have a low pass filter in our circuit?"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "## 5. Arduino/Python Heart Monitor (Extra Credit)\n",
-    "a) Now connect the output of your amplifier to your Arduino. You will want to use\n",
-    "reference single-ended (RSE) mode for detection, although differential mode will\n",
-    "work too.\n",
-    "\n",
-    "b) Create a new GUI as you have before with a while loop, DAQ Express\n",
-    "acquisition module, and a waveform graph. Use continuous sampling and pick a\n",
-    "reasonable sampling rate and buffer size. (Hint: what’s the bandwidth of your\n",
-    "amplifier? Pick a sampling frequency ~5X this bandwidth).\n",
-    "\n",
-    "c) Build a heart monitor application which produces the following:\n",
-    "\n",
-    "i. A graph of the waveform, appropriately scaled (+10 points)\n",
-    "\n",
-    "ii. A short beep indicating a heartbeat (+10 points)\n",
-    "\n",
-    "iii. A number indicating heart rate. This should be updated in real time. (+10\n",
-    "points)\n",
-    "\n",
-    "iv. A long tone indicating cardiac arrest (aka “code blue”). In our case, we will\n",
-    "define this as having no detectable pulse for 5 seconds. (+10 points)\n",
-    "\n",
-    "v. Frequency of tone scales with heart rate (higher heart rates lead to higher\n",
-    "frequencies). (+10 points)\n",
-    "\n",
-    "vi. Add a software band-pass filter to reduce interference and motion artifacts.\n",
-    "(+10 points)\n",
-    "\n",
-    "vii. Use an autocorrelation algorithm rather than a thresholding algorithm to\n",
-    "detect heart rate. Note that this will be much more robust than the\n",
-    "thresholding algorithm. (+30 points)\n",
-    "\n",
-    "d) Here are some tips to get you started:\n",
-    "\n",
-    "i. You’ll want to come up with a way of identifying the heartbeat and marking\n",
-    "the time when it occurs (in milliseconds). This can be accomplished using an\n",
-    "amplitude comparison which triggers an event structure.\n",
-    "\n",
-    "ii. The simplest way to determine heart rate is to subtract the current heart beat\n",
-    "timestamp from the last recorded heart beat timestamp. To do this, you’ll\n",
-    "need to use something called a “shift register” in LabVIEW.\n",
-    "\n",
-    "iii. You can identify cardiac arrest in a similar way.\n",
-    "\n",
-    "iv. The trick to getting this to work is in making sure your event code only runs\n",
-    "once per heartbeat. To do this, you could set a time threshold. If an event\n",
-    "occurs within this minimum time threshold after the previous event, you\n",
-    "would ignore it, because you’d assume it was triggered by the same heart\n",
-    "beat waveform. In electronics, we refer to this as “debouncing”.\n",
-    "\n",
-    "v. To create a tone, check out the “Beep” function in LabVIEW. This lets you\n",
-    "pick a frequency and duration.\n",
-    "\n",
-    "vi. Make the tone frequency scale with the heart rate, so faster heart rates\n",
-    "generate higher frequency beeps.\n",
-    "\n",
-    "e) To claim your extra credit, demonstrate your heart monitor to a GSI and upload\n",
-    "screenshots of your GUI and block diagram along with your lab questions."
-   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -241,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.4.5"
   }
  },
  "nbformat": 4,
