--- a/lab4/lab4_EC.ipynb
+++ b/lab4/lab4_EC.ipynb
@@ -42,17 +42,6 @@
     "\n",
     "    - A graph of the waveform, appropriately scaled (+10 points)\n",
     "\n",
-    "    - A short beep indicating a heartbeat (+10 points)\n",
-    "\n",
-    "    - A number indicating heart rate. This should be updated in real time. (+10\n",
-    "        points)\n",
-    "\n",
-    "    - A long tone indicating cardiac arrest (aka “code blue”). In our case, we will\n",
-    "        define this as having no detectable pulse for 5 seconds. (+10 points)\n",
-    "     \n",
-    "    - Frequency of tone scales with heart rate (higher heart rates lead to higher\n",
-    "        frequencies). (+10 points)\n",
-    "\n",
     "    - Add a software band-pass filter to reduce interference and motion artifacts.\n",
     "        (+10 points)\n",
     "\n",
@@ -61,6 +50,101 @@
     "        thresholding algorithm. (+30 points)\n",
     "\n",
     "- To claim your extra credit, demonstrate your heart monitor to a GSI and explain the algorithms used\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# allows plots to be plotted right below the cell when run\n",
+    "%matplotlib inline \n",
+    "import serial # the library for reading from serial com ports\n",
+    "import numpy as np # naming convention for numpy library\n",
+    "import matplotlib.pyplot as plt # naming convention for matplotlib\n",
+    "from scipy.fftpack import fft, ifft # import discrete fourier transform and its inverse\n",
+    "from scipy import signal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def sample_arduino():\n",
+    "    # preamble to set up serial communications\n",
+    "    device = \"COM9\" # com port of Arduino <- CHANGE THIS TO THE ONE YOU FOUND\n",
+    "    baud = 115200\n",
+    "    ser = serial.Serial(device, baud, timeout=10)\n",
+    "\n",
+    "    # read in every line of serial code and throw away corrupt data\n",
+    "    def read_serial_data(N):\n",
+    "        raw_data = []\n",
+    "        while (len(raw_data) < N+10): \n",
+    "            data = ser.readline()\n",
+    "            raw_data.append(data)\n",
+    "        data = []\n",
+    "        for i in raw_data:\n",
+    "            try:\n",
+    "                data.append(float(i))\n",
+    "            except:\n",
+    "                continue\n",
+    "        return data\n",
+    "    raw_data = read_serial_data(3000) # <- Adjust this line to read in more/less data\n",
+    "    ser.close()\n",
+    "    return raw_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "signal = sample_arduino()\n",
+    "plt.plot(signal) # change the indices to zoom in/out in time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dft = fft(signal) # calculate fourier transform\n",
+    "fs = 1000 # sampling rate\n",
+    "N = len(dft) # length of discrete fourier transform\n",
+    "freqs = [i*fs/N for i in range(N)] # convert from dft frequencies to Hz\n",
+    "plt.plot(freqs[2:1000], np.abs(dft[2:1000])) # change the indices to zoom in/out in frequency"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Digital Signal Processing ###\n",
+    "\n",
+    "Look up the documentation for scipy.signal's types of filters. For example, you can implement the a Butterworth Filter using:\n",
+    "\n",
+    "scipy.signal.butter(N, Wn, btype='low', analog=False, output='ba')\n",
+    "\n",
+    "The parameters are:\n",
+    "\n",
+    "- btype : {‘lowpass’, ‘highpass’, ‘bandpass’, ‘bandstop’}\n",
+    "\n",
+    "- Wn = Wcutoff/Wsample\n",
+    "\n",
+    "- N : order of filter"
    ]
   }
  ],
