Updated procedure and extra credit

--- a/lab4/lab4_EC.ipynb
+++ b/lab4/lab4_EC.ipynb
@@ -24,10 +24,10 @@
     "connection before hooking up power to yourself.</span>**\n",
     "\n",
     "## Schedule and Lab Reports\n",
-    "-  Week 1: Prototype an EKG amplifier on a breadboard and test it on a live human\n",
+    "-  **Week 1:** Prototype an EKG amplifier on a breadboard and test it on a live human\n",
     "subject. Entire pre-lab is due at the beginning of the lab.\n",
     "\n",
-    "- Week 2: Read out your EKG data to the Arduino and get fancy for extra credit. The entire lab report is due the\n",
+    "- **Week 2:** Read out your EKG data to the Arduino and get fancy for extra credit. The entire lab report is due the\n",
     "week following the lab — no lab report is due at the beginning of the second week."
    ]
   },
@@ -35,28 +35,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Arduino/Python Heart Monitor (Extra Credit)\n",
-    "- Now connect the output of your amplifier to pin A0 and the GND of your circuit to the GND pin of the Arduino board\n",
-    "\n",
-    "- Build a heart monitor application which produces the following:\n",
-    "\n",
-    "    - A graph of the waveform, appropriately scaled (+10 points)\n",
-    "\n",
-    "    - Add a software band-pass filter to reduce interference and motion artifacts.\n",
-    "        (+10 points)\n",
-    "\n",
-    "    -  Use an autocorrelation algorithm rather than a thresholding algorithm to\n",
-    "        detect heart rate. Note that this will be much more robust than the\n",
-    "        thresholding algorithm. (+30 points)\n",
-    "\n",
-    "- To claim your extra credit, demonstrate your heart monitor to a GSI and explain the algorithms used\n"
+    "## 5. Arduino/Python Heart Monitor\n",
+    "- Retrieve your breakboard EKG circuit from last week, and hook up an Arduino Uno to a lab or personal computer via USB\n",
+    "- Upload the send_serial.ino code onto the Arduino using the IDE, as in previous labs, and note the COM port\n",
+    "- Following the same setup as last week, connect two 9V batteries to your circuit and three leads to an (alive) lab partner. The optimal setup is two signal electrodes above and below the chest, and one reference electrode on the right ankle.\n",
+    "- Verify that your EKG is working by hooking up the output to an oscilloscope and observing the waveform\n",
+    "- Now we will use the Arduino to digitize the EKG signal. Disconnect the leads from your lab partner, disconnect the oscilloscope probes, and connect the output of your amplifier to Arduino pin A0, and the ground of your circuit to the 3.3V pin of the Arduino board.\n",
+    "**Before reconnecting the EKG leads, be sure that the your circuit GROUND is only connected to the 3.3V Arduino pin, and that any ground connection to an oscilloscope or power supply is disconnected (otherwise you risk damaging the Arduino).**\n",
+    "- Reconnect the EKG leads to the electrodes and run the following code to acquire the EKG signal. Be sure to insert the correct COM port.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -114,15 +107,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 9**: Why are we connecting the circuit ground to the 3.3V pin of the Arduino, as opposed to the GND pin? Hint: disconnect the EKG leads from your lab partner, connect circuit ground to the GND pin, and reconnect the leads. How does your EKG signal change?\n",
+    "\n",
+    "Now, run the code below in order to plot and analyze your EKG spectrum in fourier space:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "dft = fft(signal) # calculate fourier transform\n",
-    "fs = 1000 # sampling rate\n",
+    "fs = 1000 # SAMPLING RATE, needs to match send_serial.ino code\n",
     "N = len(dft) # length of discrete fourier transform\n",
     "freqs = [i*fs/N for i in range(N)] # convert from dft frequencies to Hz\n",
     "plt.plot(freqs[2:1000], np.abs(dft[2:1000])) # change the indices to zoom in/out in frequency"
@@ -132,20 +134,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Digital Signal Processing ###\n",
-    "\n",
-    "Look up the documentation for scipy.signal's types of filters. For example, you can implement the a Butterworth Filter using:\n",
-    "\n",
-    "scipy.signal.butter(N, Wn, btype='low', analog=False, output='ba')\n",
-    "\n",
-    "The parameters are:\n",
-    "\n",
-    "- btype : {‘lowpass’, ‘highpass’, ‘bandpass’, ‘bandstop’}\n",
-    "\n",
-    "- Wn = Wcutoff/Wsample\n",
-    "\n",
-    "- N : order of filter"
+    "**Question 10**: Save a plot of your EKG signal and its discrete fourier transform. Based on the bandwidth of your signal, what minimum sampling rate should you be using? Decrease the sampling rate within the send_serial.ino and dft code. At what point do you begin to see aliasing, and does this match your prediction?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Extra Credit \n",
+    "\n",
+    "Choose any combination of the 3 extra credit options below. Maximum total extra credit is 20pt. \n",
+    "\n",
+    "- **Extra credit: Hardware component** \n",
+    "\n",
+    "-- Solder your entire EKG circuit onto a protoboard for more robust performance and decreased interference. Ask GSI's for soldering guidance and equipment (wires, headers, battery connectors, etc). Test your soldered circuit using an oscilloscope following directions from week 1. Once your circuit is approved by a GSI, record and save your EKG signal using the Arduino. What differences do you see in signal quality (noise, interference, motion artifacts) between your soldered circuit and the breadboard circuit? (+10 points) \n",
+    "\n",
+    "- ** Extra credit: Software component** \n",
+    "\n",
+    "Build a heart monitor application in python that has the following capabilitie(s):\n",
+    "\n",
+    "   -- Design and implement a software band-pass filter to reduce interference and motion artifacts in the EKG signal. Compare your EKG signal before and after filtering. Were you able to reduce interference and/or motion artifacts? Did the filtering affect the shape of your waveform? (+10 points)\n",
+    "\n",
+    "   -- Design and implement an algorithm to detect heart rate. Hint: some potential strategies include thresholding or autocorrelation. Measure and record the heart rate of a lab partner before and after doing 10-20 jumping jacks! (+10 points)\n",
+    "\n",
+    "\n",
+    "**To claim your extra credit, include all code and output graphs in your final lab report. Also take a photo of your soldered heart monitor and include it in your final lab report. **"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -164,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.5"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
